# ambiguity-lexicon-classifier

./: .gitignore  README.md  pyproject.toml
configs/: en_model_config.json  en_model_config.yaml
scripts/: build_lexicon.py  build_lexicon_en.py  list_wiktionary_langs.py  regex_stress_test.py  score_terms.py  summarize_lexicon.py
src/: __init__.py
src/ambiguity/: __init__.py  scorer.py
src/language_resources/: __init__.py  hunspell_parser.py  resources.py
src/regex_tester/: __init__.py  stress_tester.py
tests/: __init__.py  test_ambiguity_model_en.py  test_regex_stress_metadata.py  test_regex_stress_tester.py
