[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ambiguity-toolkit"
version = "0.1.0"
description = "Multilingual term ambiguity scoring and regex stress testing toolkit."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "polars>=0.20",
    "wordfreq>=3.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0"
    "langcodes[data]>=3.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
hunspell = [
    "hunspell>=0.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
